--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,13 @@ run {
     if (project.hasProperty('args')) {
         args project.args.split('\\s+');
     }
+
+    systemProperties System.getProperties()
 }
 
+test {
+    systemProperties System.getProperties()
+}
 
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
