--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.apache.pdfbox:pdfbox:2.0.7'
     compile 'net.sourceforge.argparse4j:argparse4j:0.7.0'
-    compile 'org.apache.commons:commons-text:1.1'
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
@@ -34,6 +33,11 @@ dependencies {
 // Define the main class for the application
 mainClassName = 'com.parlay.App'
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.parlay.App'
+    }
+}
 
 run {
     if (project.hasProperty('args')) {
