--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ dependencies {
 }
 
 // Define the main class for the application
-mainClassName = 'com.parlay.App'
+mainClassName = 'parlay.App'
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.parlay.App'
+        attributes 'Main-Class': 'parlay.App'
     }
 }
 
